# ramon

./: .gitignore  CHANGELOG.md  Justfile  LICENSE  README.md  pyproject.toml  ramon.py  requirements.txt  setup.py
ramon/: __init__.py  agent.py  cli.py  models.py  prompt.txt
ramon/plugins/: jira.py
ramon/prompts/: v1.txt  v2.txt
ramon/repositories/: file_task_repository.py  task_repository.py
tests/: test_agent.py  test_jira.py  test_models.py
