[tool.poetry]
name = "ramon"
version = "0.2.0"
description = "AI-powered task management system"
authors = ["Adolfo Builes <builes.adolfo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "*"
pydantic-ai = "*"

devtools = "*"
logfire = "*"
nanoid = "*"
httpx = "*"
jira="*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "*"
dirty-equals = "*"
black = "*"
flake8 = "*"
isort = "*"
inline_snapshot = "*"
click_default_group = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]

[tool.logfire]
ignore_no_config = true
