[project]
name = "ramon"
version = "0.2.0"
description = "AI-powered task management system"
authors = ["Adolfo Builes <builes.adolfo@gmail.com>"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "devtools>=0.12.2",
    "httpx>=0.28.1",
    "jira>=3.8.0",
    "logfire>=2.6.2",
    "nanoid>=2.0.0",
    "pydantic-ai>=0.0.12",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "click-default-group>=1.2.4",
    "dirty-equals>=0.8.0",
    "flake8>=7.1.1",
    "inline-snapshot>=0.15.1",
    "isort>=5.13.2",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.2",
]

[tool.pytest.ini_options]
testpaths = "tests"